--- a/views/en/index_en.html
+++ b/views/en/index_en.html
@@ -1,11 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ca">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Currículum Nil Ortega Prior</title>
+  <link rel="stylesheet" href="estils.css/css.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
 <body>
-    
+  <!-- NAVBAR SUPERIOR -->
+  <nav class="navbar">
+    <div class="left-icon">
+      <a href="views/en/index_en.html"><i class="fas fa-globe"></i></a>
+    </div>
+    <div class="right-icons">
+      <a href="index.html"><i class="fas fa-id-card"></i></a>
+      <a href="views/es/educacion.html"><i class="fas fa-home"></i></a>
+      <a href="views/es/experiencia.html"><i class="fas fa-briefcase"></i></a>
+    </div>
+  </nav>
+  <main>
+    <h1>Curriculum</h1>
+    <h2>Nil Ortega Prior</h2>
+
+    <!-- PRESENTACIÓN EN HORIZONTAL -->
+    <div class="presentacion-horizontal">
+      <div class="texto-largo">
+        Hello, in December Nil Ortega Prior, I have been in Barcelona for 16 years, more specifically in L'Hospitalet de Llobregat (Gornal neighborhood). I am a curious person. I like to manipulate objects and interest myself in their functioning; gaudeixo investigant things in general. One of my biggest hobbies is listening to music: whenever it's busy, it's nice to have something musical. I have also paid close attention to the world of technology and the innovative innovations that are appearing throughout the times. Furthermore, I try to learn new things and give the best of myself to everything I do.
+      </div>
+
+      <img class="profile-img" src="img/Qui Soc.jpg" alt="Foto de Nil Ortega Prior" />
+    </div>
+
+    <h3>Objectiu Professional</h3>
+    <div class="texto-largo">
+        My professional goal is to gain practical experience and knowledge in networks at an internship company. I seek to apply my skills in local networks or contribute to the growth and efficiency of the organization, while continuing to pursue entrepreneurship and grow professionally in a dynamic and collaborative environment.
+    </div>
+
+    <h3>My Skills</h3>
+    <div class="texto-largo">
+      - Teamwork<br />
+      - Learning capacity<br />
+      - Responsibility and punctuality<br />
+      - Coneixements en HTML i CSS<br />
+      - Effective communication
+    </div>
+
+    <hr class="separador" />
+    <h3>Vídeo Curriculum</h3>
+    <div class="video-container ">
+      <iframe width="560" height="315" src="img/Video Presentacion Pagina Principal.mp4" frameborder="0" allowfullscreen></iframe>
+    </div>
+  </main>
 </body>
 </html>
