--- a/estils.css/css.css
+++ b/estils.css/css.css
@@ -1,4 +1,4 @@
-/* Reset básico */
+
 * {
   margin: 0;
   padding: 0;
@@ -13,7 +13,7 @@ body {
   padding: 0;
 }
 
-/* NAVBAR y FOOTER - Estilos base */
+
 .navbar, .footer-nav {
   display: flex;
   justify-content: space-between;
@@ -126,18 +126,20 @@ h3 {
 
 .map-embed {
   flex: 2;
-  min-width: 300px;
-  max-width: 600px;
+  width: 600px;
+  height: 100%;
+ 
 }
+
 
 iframe {
   width: 100%;
-  height: 400px;
+  height: 500px; 
   border: none;
   border-radius: 10px;
 }
 
-/* EXPERIENCIA - NUEVO DISEÑO */
+
 .experiencia-grid {
   display: flex;
   flex-direction: column;
@@ -176,7 +178,7 @@ iframe {
   border-radius: 8px;
 }
 
-/* NUEVO: Presentación en horizontal (solo en escritorio) */
+
 .presentacion-horizontal {
   display: flex;
   align-items: center;
@@ -195,7 +197,7 @@ iframe {
   margin-top: 0;
 }
 
-/* RESPONSIVE DESIGN: vista móvil */
+
 @media (max-width: 768px) {
   .navbar, .footer-nav {
     flex-direction: column;
@@ -277,7 +279,12 @@ iframe {
   .presentacion-horizontal .profile-img {
     margin-top: 10px;
   }
+
+  iframe {
+    height: 450px; 
+  }
 }
+
 
 .map-embed iframe {
   width: 100%;
