modificacion comentarios final
modificacion comentarios final

--- a/views/es/educacion.html
+++ b/views/es/educacion.html
@@ -40,9 +40,7 @@
           <p>El Institut Joan XIII es un centro educativo situado en L'Hospitalet de Llobregat, especializado en formación profesional y bachillerato. Ofrece una amplia variedad de ciclos formativos, incluyendo el de Sistemas Microinformáticos y Redes, que he cursado durante mi formación.</p>
         </div>
         <div>
-          <iframe src="https://www.google.com/maps/embed?pb=!3m2!1sca!2ses!4v1746798408431!5m2!1sca!2ses!6m8!1m7!1s6Cre3E8WNPYmaPaknWp2Jg!2m2!1d41.34934646709578!2d2.107764468586086!3f334.2231717266598!4f2.0692937470151236!5f0.7820865974627469"
-            width="600" height="500" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!3m2!1sca!2ses!4v1746798408431!5m2!1sca!2ses!6m8!1m7!1s6Cre3E8WNPYmaPaknWp2Jg!2m2!1d41.34934646709578!2d2.107764468586086!3f334.2231717266598!4f2.0692937470151236!5f0.7820865974627469"></iframe>
         </div>
       </div>
 
@@ -52,9 +50,7 @@
           <p>Durante el segundo curso del ciclo, realicé las prácticas de Formación en Centros de Trabajo (FCT) en una empresa local del sector tecnológico. Allí pude aplicar los conocimientos adquiridos en clase en un entorno profesional real, trabajando en tareas como mantenimiento de equipos, soporte técnico y redes.</p>
         </div>
         <div>
-          <iframe src="https://www.google.com/maps/embed?pb=!3m2!1sca!2ses!4v1746798717439!5m2!1sca!2ses!6m8!1m7!1shDhJnvOo7jnpPMfKyPYxtA!2m2!1d41.38966928441782!2d2.008229346136111!3f316.3463558553223!4f2.382984380815685!5f0.7820865974627469"
-            width="400" height="500" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!3m2!1sca!2ses!4v1746798717439!5m2!1sca!2ses!6m8!1m7!1shDhJnvOo7jnpPMfKyPYxtA!2m2!1d41.38966928441782!2d2.008229346136111!3f316.3463558553223!4f2.382984380815685!5f0.7820865974627469"></iframe>
         </div>
       </div>
     </main>
