--- a/views/en/education.html
+++ b/views/en/education.html
@@ -10,12 +10,12 @@
 <body>
   <nav class="navbar">
     <div class="left-icon">
-      <a href="../en/index_en.html"><i class="fas fa-globe"></i></a>
+      <a href="../../index.html"><i class="fas fa-globe"></i></a>
     </div>
     <div class="right-icons">
-      <a href="../../index.html"><i class="fas fa-id-card"></i></a>
-      <a href="educacion.html"><i class="fas fa-home"></i></a>
-      <a href="experiencia.html"><i class="fas fa-briefcase"></i></a>
+      <a href="./index_en.html"><i class="fas fa-id-card"></i></a>
+      <a href="./education.html"><i class="fas fa-home"></i></a>
+      <a href="./experience.html"><i class="fas fa-briefcase"></i></a>
     </div>
   </nav>
 
